--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,9 @@ compileJava.options.encoding="UTF-8"
 compileTestJava.options.encoding="UTF-8"
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'junit:junit:4.13'
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
 }
